spelling and formatting fixes (Christiane, Hanna)

--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -2,7 +2,7 @@
 \label{section:abnahmephase}
 Nach Abschluss der Implementierungsphase wurde das Projekt, wie zuvor mit der
 Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Einzelgespräch,
-als auch der gesamten Abteilung in Form einer Präsentation, präsentiert.
+als auch der gesamten Abteilung in Form einer Präsentation vorgestellt.
 
 Das Hauptaugenmerk und die Vorgehensweise war in beiden Fällen jedoch unterschiedlich
 und wird in den folgenden Abschnitten erläutert.
@@ -14,19 +14,18 @@ Vorführung des Codes wurde mit dem Abteilungsleiter Sebastian Freundt im
 Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 
 \begin{itemize}
-    \item Demonstration des Programms über die Kommandozeile, mit Schritt-für-Schritt Erklärung der gewählten Parameter und deren Design-Entscheidung.
-    \item Sichtung des Codes, angefangen mit der Hauptroutine.
-    \item Erläuterung der gewählten Datenstrukturen und Begründung für die Nutzung dieser.
-    \item Limitation des Algorithmus und des CLI-Programms.
-    \item Weitere Schritte zur Verbesserung der Hauptprogramms.
-    \item Mögliche Ansätze zur Verbesserung des Algorithmus.
+    \item Demonstration des Programms über die Kommandozeile, mit Schritt-für-Schritt-Erklärung der gewählten Parameter und deren Design-Entscheidung
+    \item Sichtung des Codes, angefangen mit der Hauptroutine
+    \item Erläuterung der gewählten Datenstrukturen und Begründung für die Nutzung dieser
+    \item Limitation des Algorithmus und des CLI-Programms
+    \item Weitere Schritte zur Verbesserung der Hauptprogramms
+    \item Mögliche Ansätze zur Verbesserung des Algorithmus
 \end{itemize}
 
 \subsection{Präsentation des Programms}
 
-Nachdem Code-Flight mit dem Abteilungsleiter, wurde ebenfalls
-eine Präsentation für das gesamte Team der Abteilung Datenverarbeitung gehalten.
+Nach dem Code-Flight mit dem Abteilungsleiter wurde für das gesamte Team der Abteilung Datenverarbeitung ebenfalls eine Präsentation gehalten.
 Diese beschränkte sich im Inhalt jedoch auf die Grundprinzipien des Algorithmus, sowie
 die Funktion und Nutzung des CLI-Programms. Unter anderem wurden verfügbare
 Parameter und maximal zulässige Dateigrößen erläutert.
-Zum Schluss wurde noch ein Post Mortem gehalten, und die gewonnenen Erkenntnisse in Bezug auf die Arbeit mit Kanban und der testgetriebenen Entwicklung erläutert.
+Abschließend wurde ein Post Mortem gehalten und die gewonnenen Erkenntnisse in Bezug auf die Arbeit mit Kanban und der testgetriebenen Entwicklung erläutert.
