--- a/dokumentation/src/dokumentationsphase.tex
+++ b/dokumentation/src/dokumentationsphase.tex
@@ -7,9 +7,9 @@ der Sprache des Unternehmens, verfasst.
 
 \subsection{Nutzerdokumentation}
 Da der Funktionsumfang des Programms recht klein ist, wird auf ein handelsübliches
-Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile mit dem Aufruf des Programms unter Zusatz des Hilfe Parameters ("-- --help" bzw. "--h") statt.
-Dieser Aufrauf erzeugt eine kurze Beschreibung des Programms und dessen Parameter.
+Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile mit dem Aufruf des Programms unter Zusatz des Hilfe-Parameters (''help'' bzw. ''h'') statt.
+Dieser Aufruf erzeugt eine kurze Beschreibung des Programms und dessen Parameter.
 
 \subsection{Entwicklerdokumentation}
 Die Entwicklerdokumentation des Codes findet über einen
-Dokumentationsblock oberhalb der Signatur jeder Funktion statt. Dieser Block beinhaltet eine kurze Beschreibung der funktionsweise der Routine, sowie die Namen und erwarteten Datentypen der Funktionsparameter. Die Formatierung ist ReStructuredText( kurz ReST), und kann mit Hilfe von Dokumentationstools ausgelesen und später als eine lokale Webseite mit automatisch generierten Verlinkungen ausgegeben werden.
+Dokumentationsblock oberhalb der Signatur jeder Funktion statt. Dieser Block beinhaltet eine kurze Beschreibung der Funktionsweise der Routine, sowie die Namen und erwarteten Datentypen der Funktionsparameter. Die Formatierung ist ReStructuredText( kurz ReST), kann mit Hilfe von Dokumentationstools ausgelesen und später als eine lokale Webseite mit automatisch generierten Verlinkungen ausgegeben werden.
