--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -1,7 +1,7 @@
 \section{Einleitung}
 \subsection{Projektumfeld}
 Die GA Financial Solutions GmbH ist ein fünfköpfiger Finanzdienstleister im
-Herzen Berlins, welcher sich auf computer-gestütztes Handeln
+Herzen Berlins, welcher sich auf computergestütztes Handeln
 von Futures, Aktien und anderen Derivaten spezialisiert hat. Direkte Kunden gibt es zur Zeit
 nicht und die Firma finanziert sich durch Investoren und den Gewinn ihrer
 Strategien. Die Rolle des Auftraggebers und Kunden übernimmt im Rahmen des
@@ -13,7 +13,7 @@ von verschiedenen Anbietern anhand einer Metrik vergleicht und übereinstimmende
 Strings ausgibt.\par
 
 \subsection{Projektbegründung}
-Die GA Financial Solutions handelt Wertpapiere aller Art auf eigene
+Die GA Financial Solutions GmbH handelt Wertpapiere aller Art auf eigene
 Rechnung.  Dabei ist es marktüblich, dass Referenzdaten, Preisdaten
 und Ausführungen von unterschiedlichen Dienstleistern bezogen werden.
 So stehen ca. 223 Mio. handelbaren Wertpapieren rund 500.000 mögliche
@@ -24,7 +24,7 @@ einen Bruchteil der Papiere.\par
 In Ermangelung eines weltweiten Standards, der jedem Marktteilnehmer in
 jeder Handelsphase gerecht wird, werden unterschiedliche Symbologien
 benutzt, deren kleinster gemeinsamer Nenner stets die
-Klartextbezeichnung des begebenen Papiers zusammen mit der
+Klartextbezeichnung des gegebenen Papiers zusammen mit der
 Klartextbezeichnung des Herausgebers ist.  Erschwert wird die
 Problematik überdies noch durch unterschiedliche Transliterationsverfahren,
 so führt z.B. die NASDAQ die Firma "`Panasonic Corp."',
@@ -34,37 +34,37 @@ die GLEIS-Datenbank\footnote{Global Legal Entity Identifier System} jedoch unter
 \end{CJK}%
 , was transskribiert wiederum "`Panasonikku Kabushiki-gaisha"' ergibt. \par
 
-Bei der GA Financial Solutions werden Zuordnungen zwischen Symbologien
-aktuell ad-hoc mit Heuristiken und Handarbeit bewerkstelligt.  Der
+Bei der GA Financial Solutions GmbH werden Zuordnungen zwischen Symbologien
+aktuell ad hoc mit Heuristiken und in Handarbeit bewerkstelligt.  Der
 Zeitaufwand ist entsprechend hoch, die Fehlerrate ebenfalls.  Es
 verbietet sich geradezu, die bisherigen Heuristiken systematisch zur
 Zuordnung aller Herausgeber aller Wertpapiere zu benutzen.\par
 
-Das zu entwickelnde Tool soll vor Allem den Zeitaufwand und die benötigte
+Das zu entwickelnde Tool soll vor allem den Zeitaufwand und die benötigte
 menschliche Komponente, und somit Fehlerquellen, reduzieren, so dass diese Ressourcen entsprechend
-anderen Aufgaben zu geteilt werden können.\par
+anderen Aufgaben zugeteilt werden können.\par
 
 \subsection{Projektschnittstellen}
 Das Programm wird als Kommandozeilenprogramm angeboten, welches
 Daten per Pipe oder unter Angabe eines Dateipfads annimmt und diese im .csv 
 Format über STDOUT ausgibt. Dieser Ansatz der Resultatausgabe wird explizit gewünscht, 
 da sich das Programm auf diese Art mühelos in die bisherige Toolchain der Firma einbinden lässt.
-Das Programm wird vor Allem in der Abteilung für Datenverarbeitung zum Einsatz kommen.\par
+Das Programm wird vor allem in der Abteilung für Datenverarbeitung zum Einsatz kommen.\par
 
 Als technische Schnittstelle ist insbesondere das Datensammelsystem zu nennen,
 welches täglich unsere Datenbanken mit neuen Datensätzen füttert. Die Ergebnisse
 dieses Systems liegen im CSV-Format auf unseren Servern, bevor sie am Ende des
-Tages komprimiert werden.Eine direkte Anbindung des zu entwickelnden Projekts an das Datensammelsystem findet nicht statt. Wichtig ist allerdings, dass das Programm CSV-Dateien unterstützt, welche vom System bereitgestellt werden.\par
+Tages komprimiert werden. Eine direkte Anbindung des zu entwickelnden Projekts an das Datensammelsystem findet nicht statt. Wichtig ist allerdings, dass das Programm CSV-Dateien unterstützt, welche vom System bereitgestellt werden.\par
 
 Mittel und Genehmigung des Projekts stellt die Abteilung Datenverarbeitung,
 vertreten durch Sebastian Freundt.\par
 
 \subsection{Projektabgrenzung}
-Während die Hauptziele des Projekts das Vergleichen mehrerer hunderttausend Symbole und die effiziente Gestaltung dieser Vergleiche ist, sind folgende Themen explizit nicht Teil der Aufgabe:
+Während die Hauptziele des Projekts das Vergleichen mehrerer hunderttausend Symbole und die effiziente Gestaltung dieser Vergleiche sind, sind folgende Themen explizit nicht Teil der Aufgabe:
 
 \begin{itemize}
     \item Datenintegrität - Die Überprüfung des Datenformats ist nicht Teil des Aufgabenfeldes.
-    \item Datenverifizierung - Die Prüfung ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
+    \item Datenverifizierung - Die Prüfung, ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
     \item Datenbereitstellung - Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht Teil des Projekts.
 \end{itemize}
 \clearpage
