--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -1,39 +1,34 @@
 \section{Fazit}
 \label{section:postmortem}
 \subsection{Soll- /Ist-Vergleich}
-Rückblickend kann festgehalten werden, dass alle, im Pflichtenheft
-abgesprochenen Funktionen und Anforderungen eingehalten worden sind,
-und zur vollsten Zufriedenheit des Auftraggebers erstellt wurden. Hierbei
-spielt die Entscheidung, die Einbindung des C Codes in Python zu streichen, sicherlich
-eine elementare Rolle. Wie man erkennen kann, wurden die Stunden, welche durch
-die Streichung frei wurden, effektive und vollsten ausgenutzt um den Anforderungen
-des Projekts gerecht zu werden. Dabei wurden die von der IHK vorgegebenen 70 Stunden
-konsequent eingehalten.
+Rückblickend kann festgehalten werden, dass alle im Pflichtenheft
+abgesprochenen Funktionen und Anforderungen eingehalten worden sind
+und zur vollsten Zufriedenheit des Auftraggebers geliefert wurden. Hierbei
+spielt die Entscheidung, die Einbindung des C-Codes in Python zu streichen, sicherlich
+eine elementare Rolle. Wie man erkennen kann, wurden die freigewordenen Stunden effektiv ausgenutzt um den Anforderungen des Projekts gerecht zu werden. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
 
 \subsection{Post Mortem}
 
-Vor Allem die Entwurfsphase half dem Autor seine Kenntnisse aus dem Projektmanagement anzuwenden,
-und waren bei den Nutzwertanalysen besonders hilfreich. Auch erwies sich die Anwendung des
-testgetriebenen Entwicklungskreislaufs als große Unterstützung dar - so wurden lästige Segmentation Faults frühzeitig
-erkannt, und die Funktionen (und somit das gesamt Programm) konnten schneller zu produktionsreife heranwachsen.
+Vor allem während der Entwurfsphase konnte der Autor von seinen Kenntnissen aus dem Projektmanagement profitieren. Besonder bei den Nutzwertanalysen waren diese besonders hilfreich. Weiter erwies sich die Anwendung der
+testgetriebenen Entwicklung als große Unterstützung. So wurden lästige Segmentation Faults frühzeitig erkannt und die Funktionen (und somit das gesamte Programm) konnten zügiger fertiggestellt werden.
 Auch das genutzte Kanban-Board erwies sich als großartiges Werkzeug, um Prozesse und deren Fortschritt zu dokumentieren.
 Kurze Kommunikations- und Entscheidungswege ermöglichten eine agile Entwicklung der Projekts und werden
 dem Autor auch weiterhin als ein wichtiger Baustein produktiver Arbeitsumgebungen in Erinnerung bleiben.
 
 \subsection{Ausblick}
-Punkte, welche im Lastenheft genannt, aber nicht mit in das Pflichtenheft genommen worden,
+Punkte, welche im Lastenheft genannt, aber nicht mit in das Pflichtenheft genommen wurden,
 stehen nun natürlich auf der Liste der weiteren Schritte. Da der Code gut dokumentiert
-und mit viel Auge für Lesbarkeit geschrieben worden ist, ist eine Cythoneinbindung nun effizient umsetzbar.
-Durch die bereitgestellten Tests können ebenfalls schnell Python Unittests erstellt, und somit
-die Einbindung des C Codes effektiv und verlässlich auch in Python überprüft werden.
+und leserlich geschrieben wurde, ist eine Cythoneinbindung nun effizient umsetzbar.
+Durch die bereitgestellten Tests können ebenfalls schnell Python Unittests erstellt und somit
+die Einbindung des C-Codes effektiv und verlässlich auch in Python überprüft werden.
 
-Schlussendlich bleiben noch zwei Punkte, welche in Zukunft angegangen werden könnten, um das Programm weiter zu verfeinern:
+Schlussendlich bleiben noch zwei Punkte, welche in Zukunft angegangen werden können, um das Programm weiter zu verfeinern:
 \begin{enumerate}
 
 \item Die Optimierung der Programmlogik \\
     \begin{itemize}
-        \item Verfeinerung der Hashmap - Da die maximale Anzahl an Schlüsselwörten bekannt ist, kann die Hashmap so implementiert werden, dass exakt so viele ''Felder'' im Speicher reserviert werden wie nötig - und kein einziges mehr.
-        \item Das Auswahlkriterium könnte als Funktion implementiert, und der Vergleichsfunktion als Pointer übergeben werden. So könnten Änderungen noch unkomplizierter realisiert werden.
+        \item Verfeinerung der Hashmap: Da die maximale Anzahl an Schlüsselwörten bekannt ist, kann die Hashmap dahingehend angepasst werden, dass exakt so viele ''Felder'' im Speicher reserviert werden wie nötig
+        \item Das Auswahlkriterium kann als Funktion implementiert und der Vergleichsfunktion als Pointer übergeben werden. So können Änderungen unkomplizierter realisiert werden
     \end{itemize}
 
 
